# GTCH

./: README.md
it/: CMakeLists.txt  Output-Debug.txt  Project4.sln  Project4.vcxproj  Project4.vcxproj.filters  Source.cpp  music.opus  savegame.txt
it/Debug/: Project4.exe.recipe  Project4.ilk  Project4.vcxproj.FileListAbsolute.txt  source.obj.enc  vc142.idb
it/Debug/Project4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
